# ChatDFT

./: .dockerignore  .env  .gitignore  .job_templates.json  ASE_PREVIEW_POSCAR  Dockerfile  Dockerfile.ui  Makefile  README.md  alembic.ini  chatdft_inquiries.csv  demo.py  demo_api.py  demo_hpc.py  docker-compose.yml  incar_agent.py  inquiry_intents.csv  inquiry_structured_outputs.csv  intent_generation.py  main.py  poscar_agent.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
artifacts/: README.md  baseline_gpt4o_mini.json
chatdft/: __init__.py  sdk.py
client/: app.py  chat.py  chat_history.json  home.py  home1.py  home2.py  home_final.py
configs/: qwen_lora.yaml  qwen_lora_overfit.yaml
dft_jobs_app/: .gitignore  README.md  docker-compose.yml
docs/: PIPELINE.md  intent_lora_training.md  novel_contributions_paper.md  structure_library_sql.md  vllm.md
figures/: gallery.html
notebooks/: 01_surface_topology_graph.ipynb  02_structure_generation.ipynb  03_cross_modal_alignment.ipynb  04_scf_convergence_analysis.ipynb  05_bayesian_optimization.ipynb  06_mlops_feature_store.ipynb  07_algorithm_benchmarks.ipynb  07_algorithm_benchmarks_executed.ipynb
results/: auto_remediation_benchmark.json  benchmark_results.json  e2e_benchmark.json  novel_contributions_summary.json  rag_chunker_evaluation.json
scripts/: benchmark_llm.py  e2e_test.py  export_sft_dataset.py  generate_intent_pairs.py  intent_pair_strata.yaml  test_ingest.py  train_modal.py  train_qwen_lora.sh  verify_sft_dataset.py
server/: cache.py  db.py  db_last.py  llm.yaml  log_config.py  main.py  main_updated.py  parser.py  schema.py  science_routes.py  servers.yaml  settings.py  sshio.py
tests/: ML_SYSTEM_TEST_PLAN.md  conftest.py  test_api_layer.py  test_complex_htp.py  test_dashboard.py  test_electronic_e2e.py  test_export_sft_dataset.py  test_intent_eval_harness.py  (+13 more)
(+216 files in other folders)
