[project]
name = "chatdft"
version = "0.3.0"
description = "Autonomous reaction pathway discovery via LLM-guided DFT"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yani Guan"}]
keywords = ["DFT", "catalysis", "LLM", "machine-learning", "materials-science"]

dependencies = [
    "fastapi>=0.104.0,<1.0",
    "uvicorn>=0.24.0,<1.0",
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
    "sqlalchemy>=2.0.0,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "alembic>=1.13.0,<2.0",
    "pgvector>=0.2.4,<1.0",
    "openai>=1.0.0,<2.0",
    "sentence-transformers>=2.2.0,<4.0",
    "ase>=3.22.0,<4.0",
    "pymatgen>=2024.1.1,<2026.0",
    "numpy>=1.24.0,<2.0",
    "scipy>=1.11.0,<1.15",
    "networkx>=3.0,<4.0",
    "requests>=2.31.0,<3.0",
    "httpx>=0.25.0,<1.0",
    "matplotlib>=3.7.0,<4.0",
    "jinja2>=3.1.0,<4.0",
    "python-dotenv>=1.0.0,<2.0",
    "streamlit>=1.29.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]
docs = [
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "arxiv>=2.0.0",
    "pyzotero>=1.5.0",
]
redis = [
    "redis>=5.0.0",
]
gnn = [
    "torch>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["chatdft*", "science*", "server*", "client*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["server/", "tests/", "alembic/"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
